Add VIA VX900 host bridge to a buggy PCI mode 1 quirk table.  PR/46018 Ok releng@